# audio-to-key

./: CMakeLists.txt  README.md
src/: main.cpp  recorder.hpp  ston.hpp  stovk.hpp
